tests/ui/mir/field-projection-mutating-context.stderr
error[E0308]: mismatched types
  --> $DIR/field-projection-mutating-context.rs:9:13
   |
LL |     let Foo(ref mut y): Foo<fn(&'static str)> = x;
   |             ^^^^^^^^^ one type is more general than the other
   |
   = note: expected fn pointer `for<'a> fn(&'a str)`
              found fn pointer `fn(&str)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
